namespace Domain.Inventories
{
    interface IInventory
    {

    }
}